--- a/templates/base.html
+++ b/templates/base.html
@@ -62,9 +62,16 @@
                                 <i class="fas fa-user"></i> {{ user.get_full_name|default:user.username }}
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{% url 'profile' %}">Hồ sơ</a></li>
+                                <li><a class="dropdown-item" href="{% url 'user_info' %}">
+                                    <i class="fas fa-user-circle"></i> Thông tin cá nhân
+                                </a></li>
+                                <li><a class="dropdown-item" href="{% url 'profile' %}">
+                                    <i class="fas fa-edit"></i> Chỉnh sửa hồ sơ
+                                </a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{% url 'logout' %}">Đăng xuất</a></li>
+                                <li><a class="dropdown-item text-danger" href="{% url 'logout' %}">
+                                    <i class="fas fa-sign-out-alt"></i> Đăng xuất
+                                </a></li>
                             </ul>
                         </li>
                     {% else %}
