--- a/templates/products/dashboard.html
+++ b/templates/products/dashboard.html
@@ -184,7 +184,7 @@
                         <div class="col-md-4 mb-2">
                             <div class="alert alert-danger mb-0">
                                 <strong>{{ item.product.name }}</strong><br>
-                                <small>Hết hạn trong 30 ngày tới</small>
+                                <small>Hết hạn trong 9 tháng tới</small>
                             </div>
                         </div>
                         {% endfor %}
