--- a/templates/inventory/export_detail.html
+++ b/templates/inventory/export_detail.html
@@ -56,7 +56,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>Số lượng sản phẩm:</strong></td>
-                                    <td>{{ export_items.count }}</td>
+                                    <td>{{ items.count }}</td>
                                 </tr>
                                 <tr>
                                     <td><strong>Ghi chú:</strong></td>
@@ -85,7 +85,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% for item in export_items %}
+                                        {% for item in items %}
                                         <tr>
                                             <td>{{ forloop.counter }}</td>
                                             <td>
@@ -94,6 +94,7 @@
                                             </td>
                                             <td>
                                                 <span class="badge bg-info">{{ item.batch.batch_code }}</span>
+                                                <br><small class="text-muted">(Đại diện cho {{ item.quantity }} {{ item.batch.product.unit }})</small>
                                             </td>
                                             <td>
                                                 {{ item.quantity }} {{ item.batch.product.unit }}
