--- a/templates/inventory/export_list.html
+++ b/templates/inventory/export_list.html
@@ -10,7 +10,7 @@
             <i class="fas fa-plus"></i> Tạo phiếu xuất
         </a>
     </div>
-    {% if exports %}
+    {% if page_obj %}
     <div class="table-responsive">
         <table class="table table-hover align-middle">
             <thead class="table-light">
@@ -25,7 +25,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for exp in exports %}
+                {% for exp in page_obj %}
                 <tr>
                     <td>{{ forloop.counter }}</td>
                     <td>{{ exp.export_code }}</td>
@@ -55,6 +55,44 @@
             </tbody>
         </table>
     </div>
+    
+    <!-- Pagination -->
+    {% if page_obj.has_other_pages %}
+    <nav aria-label="Page navigation" class="mt-4">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page=1">&laquo; Đầu</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Trước</a>
+                </li>
+            {% endif %}
+            
+            {% for num in page_obj.paginator.page_range %}
+                {% if page_obj.number == num %}
+                    <li class="page-item active">
+                        <span class="page-link">{{ num }}</span>
+                    </li>
+                {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                    </li>
+                {% endif %}
+            {% endfor %}
+            
+            {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">Sau</a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Cuối &raquo;</a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
+    
     {% else %}
         <div class="alert alert-info">Chưa có phiếu xuất kho nào.</div>
     {% endif %}
