--- a/templates/inventory/import_detail.html
+++ b/templates/inventory/import_detail.html
@@ -56,7 +56,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>Số lượng sản phẩm:</strong></td>
-                                    <td>{{ import_items.count }}</td>
+                                    <td>{{ items.count }}</td>
                                 </tr>
                                 <tr>
                                     <td><strong>Ghi chú:</strong></td>
@@ -84,7 +84,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% for item in import_items %}
+                                        {% for item in items %}
                                         <tr>
                                             <td>{{ forloop.counter }}</td>
                                             <td>
